--- a/templates/gunicorn.conf
+++ b/templates/gunicorn.conf
@@ -1,6 +1,6 @@
 [program:%(project)s]
-command=%(virtualenv)s/bin/gunicorn_django -w 2 -b 0.0.0.0:%(port)s
-directory=%(project_dir)s
+command=%(virtualenv)s/bin/gunicorn -w 2 -b 127.0.0.1:%(port)s
+directory=%(webfaction_app_dir)s
 user=%(user)s
 autostart=true
 autorestart=true
