Everything seems to work now!

--- a/templates/gunicorn.conf
+++ b/templates/gunicorn.conf
@@ -1,6 +1,6 @@
 [program:%(project)s]
-command=%(virtualenv)s/bin/gunicorn -w 2 -b 127.0.0.1:%(port)s
-directory=%(webfaction_app_dir)s
+command=%(virtualenv)s/bin/gunicorn %(project)s.wsgi.production:application -w 2 -b 127.0.0.1:%(port)s
+directory=%(project_django_dir)s
 user=%(user)s
 autostart=true
 autorestart=true
