--- a/fabsettings.py.template
+++ b/fabsettings.py.template
@@ -16,4 +16,5 @@ VIRTUALENVS             = "/home/bar/.virtualenvs"
 LOCAL_PROJECT_DIR       = "../.."  # ex /albericajacini_project
 PG_DATABASE_NAME        = "albericajacini"
 PG_DATABASE_USER        = "albericajacini"
+APACHE_DIR              = "/home/ajstudio1/webapps/albericajacini/apache2/bin" # used only for project with apache
 HOST                    = USER + "@" + WF_HOST # used for connection from local to server ex ajstudio1@web316.webfaction.com
