load remote database

--- a/templates/gunicorn.conf
+++ b/templates/gunicorn.conf
@@ -1,5 +1,5 @@
 [program:%(project)s]
-command=%(virtualenv)s/bin/gunicorn wsgi.production:application -w 2 -b 127.0.0.1:%(port)s
+command=%(virtualenv)s/bin/gunicorn %(project)s.wsgi.production:application -w 2 -b 127.0.0.1:%(port)s
 directory=%(project_django_dir)s
 user=%(user)s
 autostart=true
