settings template updated

--- a/fabsettings.py.template
+++ b/fabsettings.py.template
@@ -5,6 +5,7 @@ IP_HOST                 = "111.222.333.444"
 PROJECT_NAME            = "foo"
 PROJECT_DIR_NAME        = "foo_project"
 PROJECT_PARENT_DIR      = "/home/dry02/foo"
+PROJECT_MEDIA           = "/home/dry02/foo/media"
 PROJECT_DIR             = "/home/dry02/foo/foo_project"
 PROJECT_DJANGO_DIR      = "/home/dry02/foo/foo_project/foo"
 PROJECT_SETTINGS_MODULE = "settings.production"
