--- a/fabsettings.py.template
+++ b/fabsettings.py.template
@@ -3,6 +3,7 @@
 # dry01    : web331.webfaction.com, ip: 37.58.75.241
 # dry02    : web331.webfaction.com, ip: 37.58.75.241
 # dry03    : web403.webfaction.com, ip: 37.58.75.229
+# dry04    : web370.webfaction.com, ip: 5.153.9.54
 
 
 
