--- a/fabsettings.py.template
+++ b/fabsettings.py.template
@@ -13,7 +13,7 @@ WF_HOST                 = "web331.webfaction.com"
 IP_HOST                 = "37.58.75.241"
 PROJECT_NAME            = "jalupro"
 USER                    = "dry02"
-PASSWORD                = "arpe77jaci"
+PASSWORD                = ""
 PG_DATABASE_NAME        = "jalupro"
 PG_DATABASE_USER        = "jalupro"
 PROJECT_SETTINGS_MODULE = "settings.production"
