Fixed fabfile and added iperborea server in examples

--- a/fabsettings.py.template
+++ b/fabsettings.py.template
@@ -1,5 +1,6 @@
 # AVAILABLE WEBFACTION HOSTS
 # ajstudio1: web316.webfaction.com, ip: 5.153.9.53
+# iperborea: web331.webfaction.com, ip: 37.58.75.241
 # dry01    : web331.webfaction.com, ip: 37.58.75.241
 # dry02    : web331.webfaction.com, ip: 37.58.75.241
 # dry03    : web403.webfaction.com, ip: 37.58.75.229
