fabsettings template added dry05

--- a/fabsettings.py.template
+++ b/fabsettings.py.template
@@ -5,6 +5,7 @@
 # dry02    : web331.webfaction.com, ip: 37.58.75.241
 # dry03    : web403.webfaction.com, ip: 37.58.75.229
 # dry04    : web370.webfaction.com, ip: 5.153.9.54
+# dry05    : web451.webfaction.com, ip: 37.58.75.251
 
 
 
