Added dry06 ip address

--- a/fabsettings.py.template
+++ b/fabsettings.py.template
@@ -6,6 +6,7 @@
 # dry03    : web403.webfaction.com, ip: 37.58.75.229
 # dry04    : web370.webfaction.com, ip: 5.153.9.54
 # dry05    : web451.webfaction.com, ip: 37.58.75.251
+# dry06    : web503.webfaction.com, ip: 185.10.231.173
 
 
 
